@@ -1,3 +1,9 @@
+2001-11-19  Michael Meeks  <michael@ximian.com>
+
+	* bonobo/bonobo-socket.c
+	(bonobo_socket_class_init): upd.
+	(bonobo_socket_show_all): empty impl - don't propagate.
+
 Tue Nov 20 21:17:03 2001  Owen Taylor  <otaylor@redhat.com>
 
 	* bonobo/bonobo-control-frame.c (bonobo_control_frame_get_control_property):
